add content disposition to download to overwrite the filename
