# openapi.yaml
@@ -107,6 +107,12 @@ paths:
               schema:
                 type: string
                 format: binary
+          headers:
+            Content-Disposition:
+              description: download filename
+              required: true
+              schema:
+                type: string
         "404":
           description: image not found
   /image/thumbnail/{id}:
@@ -132,6 +138,12 @@ paths:
               schema:
                 type: string
                 format: binary
+          headers:
+            Content-Disposition:
+              description: download filename
+              required: true
+              schema:
+                type: string
         "404":
           description: image not found
   /image/{id}/tags:
